Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-119146

qdoc: \relates command is unable to correctly handle function overloads

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.7.0 FF
    • 6.7
    • Build tools: qdoc
    • None
    • 9171d4002 (dev)
    • DaVinci 91

    Description

      If there are two functions in the global scope, A and B, where

      • B is an overload of A
      • A is documented and uses \relates to associate it with a type
      • B is undocumented or marked \internal

      Then the node representing A is correctly 'adopted' by the type and A appears in the reference as a 'related non-member'. However, because the global scope still has the undocumented overload, trying to link to to the function using a unqualified name fails, even though one would expect to find it in the global scope. Qualifying the link with the type works as expected.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            treinio Topi Reiniƶ
            treinio Topi Reiniƶ
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There is 1 open Gerrit change