src/qdoc/qdoc/tests/generatedoutput/testdata/globalfunc/global.h
@@ -4,3 +4,5 @@
 class Globals {};
 inline int foo(int a) { return a; }
 inline int foo(int a, bool b) { return b ? a : -a; }
+// Undocumented overload
+inline int foo(int a, bool b, bool c) { return b || c ? a : -a; }
